--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 06:05:07 2018</p>
+         Last Run: Sun Nov  4 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>5</td>
-                        <td>6</td>
-                        <td>50</td>
+                        <td>5</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NW</td>
-                        <td>94</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
                         <td>16</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>19</td>
-                        <td>NNW</td>
-                        <td>90</td>
+                        <td>NW</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>19</td>
-                        <td>44</td>
+                        <td>39</td>
+                        <td>43</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>74</td>
+                        <td>77</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "16",
-                 "19"
+                 "39"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "48",
-                 "44"
+                 "49",
+                 "47",
+                 "43"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "90",
-                 "74"
+                 "91",
+                 "79",
+                 "77"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 06:05:07 2018</p>
+         Last Run: Sun Nov  4 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,24 +249,24 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>15</td>
-                        <td>62</td>
+                        <td>16</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-9</td>
-                        <td>11</td>
-                        <td>63</td>
+                        <td>-8</td>
+                        <td>12</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NE</td>
-                        <td>95</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -276,8 +277,8 @@
                         <td>65</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>94</td>
+                        <td>NE</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +306,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-9",
+                 "-8",
                  "-9"
                ]
              },
@@ -375,8 +376,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "11",
+                 "16",
+                 "12",
                  "11"
                ]
              },
@@ -386,8 +387,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "63",
+                 "64",
+                 "64",
                  "65"
                ]
              },
@@ -397,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "95",
-                 "94"
+                 "97",
+                 "97",
+                 "95"
                ]
              }
            ]
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 06:05:07 2018</p>
+         Last Run: Sun Nov  4 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 06:05:07 2018</p>
+         Last Run: Sun Nov  4 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -677,37 +678,37 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>0</td>
-                        <td>3</td>
+                        <td>-1</td>
+                        <td>2</td>
                         <td>53</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>53</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>38</td>
+                        <td>WSW</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>51</td>
+                        <td>3</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>35</td>
+                        <td>WSW</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +735,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -805,9 +806,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "8"
+                 "2",
+                 "2",
+                 "3"
                ]
              },
              {
@@ -818,7 +819,7 @@
                "data":[
                  "53",
                  "53",
-                 "51"
+                 "50"
                ]
              },
              {
@@ -827,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "38",
-                 "35"
+                 "40",
+                 "35",
+                 "33"
                ]
              }
            ]
