--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 08:05:02 2018</p>
+         Last Run: Sun Nov  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,23 +30,23 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
-                        <td>8</td>
-                        <td>5</td>
+                        <td>Mostly Cloudy</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>NW</td>
-                        <td>91</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>12</td>
-                        <td>47</td>
+                        <td>0</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
@@ -54,15 +54,15 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>35</td>
-                        <td>43</td>
+                        <td>24</td>
+                        <td>42</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "5",
+                 "9",
                  "9",
                  "10"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "8",
+                 "9",
                  "9",
                  "10"
                ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "12",
-                 "35"
+                 "0",
+                 "24"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "47",
-                 "43"
+                 "43",
+                 "46",
+                 "42"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
                  "79",
-                 "77"
+                 "79",
+                 "69"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 08:05:02 2018</p>
+         Last Run: Sun Nov  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,24 +249,24 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>16</td>
-                        <td>64</td>
+                        <td>15</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>12</td>
-                        <td>64</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>11</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -274,11 +274,11 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>11</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>95</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-8",
+                 "-10",
                  "-9"
                ]
              },
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-6",
                  "-6"
                ]
              }
@@ -376,8 +376,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "12",
+                 "15",
+                 "11",
                  "11"
                ]
              },
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "64",
-                 "66"
+                 "61",
+                 "62",
+                 "64"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
-                 "95"
+                 "96",
+                 "92",
+                 "90"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 08:05:02 2018</p>
+         Last Run: Sun Nov  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -477,7 +477,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -603,7 +603,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "63",
-                 "64",
+                 "63",
                  "66"
                ]
              },
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 08:05:02 2018</p>
+         Last Run: Sun Nov  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -678,13 +678,13 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>-1</td>
+                        <td>0</td>
                         <td>2</td>
                         <td>53</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -701,8 +701,8 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>0</td>
+                        <td>3</td>
+                        <td>1</td>
                         <td>3</td>
                         <td>50</td>
                         <td>1</td>
@@ -735,9 +735,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
                  "0",
-                 "0"
+                 "0",
+                 "1"
                ]
              },
              {
@@ -749,7 +749,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              }
            ]
@@ -828,7 +828,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
+                 "40",
                  "36",
                  "34"
                ]
