--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 10:05:02 2018</p>
+         Last Run: Sun Nov  4 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>11</td>
+                        <td>11</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>35</td>
                         <td>1</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>NW</td>
                         <td>76</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>11</td>
+                        <td>11</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>35</td>
                         <td>1</td>
-                        <td>21</td>
-                        <td>NW</td>
-                        <td>74</td>
+                        <td>23</td>
+                        <td>NNW</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>12</td>
+                        <td>12</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>34</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>21</td>
                         <td>NNW</td>
-                        <td>69</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "10",
-                 "10",
-                 "10"
+                 "11",
+                 "11",
+                 "12"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "10",
-                 "10",
-                 "10"
+                 "11",
+                 "11",
+                 "12"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "40",
-                 "40",
-                 "42"
+                 "35",
+                 "35",
+                 "34"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "76",
-                 "74",
-                 "69"
+                 "73",
+                 "65"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 10:05:02 2018</p>
+         Last Run: Sun Nov  4 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 10:05:02 2018</p>
+         Last Run: Sun Nov  4 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 10:05:02 2018</p>
+         Last Run: Sun Nov  4 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -679,20 +679,20 @@
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>53</td>
+                        <td>3</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>53</td>
+                        <td>3</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -704,11 +704,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>3</td>
-                        <td>50</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>34</td>
+                        <td>W</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -806,8 +806,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "3",
+                 "3",
                  "3"
                ]
              },
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "53",
-                 "50"
+                 "55",
+                 "54",
+                 "53"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
+                 "40",
                  "36",
-                 "34"
+                 "33"
                ]
              }
            ]
